@@ -1,3 +1,9 @@
+2004-01-22  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* conf/transp/transp_tli.c (amu_get_myaddress): use
+	htonl(INADDR_LOOPBACK) and define INADDR_LOOPBACK if not already
+	available.
+
 2004-01-21  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* wire-test/wire-test.c, hlfsd/hlfsd.c (main): pass NULL as second
